Apply (some of) Scott's requested changes